--- a/Assignment/JS/QUA/Assignment01.html
+++ b/Assignment/JS/QUA/Assignment01.html
@@ -85,7 +85,7 @@
     <div ></div>
 </section>
 <script>
-    let color=["red","green","blue","yellow","plum","deeppink"];
+    let color=["red","yellow","green","blue","deeppink","orange"];
     let divArray= document.querySelector("section").children;
 
     setInterval(function(){
