--- a/index.html
+++ b/index.html
@@ -443,9 +443,33 @@
                         <img src="assest/images/as6js1.PNG" alt="" class="assignment__img">
                     </a>
                     <div class="assignment__data">
-                        <p class="assinment__subtitle">JavaScript</p>
+                        <p class="assinment__subtitle">JavaScript SPA</p>
                         <a href="Assignment/JS/SPA/index.html">
                             <h3 class="assignment__title">Assignment 01</h3>
+                        </a>
+                    </div>
+                </div>
+
+                <div class="assignment__item">
+                    <a href="Assignment/JS/QUA/Assignment01.html">
+                        <img src="assest/images/asjsQUA1.PNG" alt="" class="assignment__img">
+                    </a>
+                    <div class="assignment__data">
+                        <p class="assinment__subtitle">JavaScript QUA</p>
+                        <a href="Assignment/JS/QUA/Assignment01.html">
+                            <h3 class="assignment__title">Assignment 01</h3>
+                        </a>
+                    </div>
+                </div>
+
+                <div class="assignment__item">
+                    <a href="Assignment/JS/QUA/Assignment02.html">
+                        <img src="assest/images/sajsUQA2.PNG" alt="" class="assignment__img">
+                    </a>
+                    <div class="assignment__data">
+                        <p class="assinment__subtitle">JavaScript QUA</p>
+                        <a href="Assignment/JS/QUA/Assignment02.html">
+                            <h3 class="assignment__title">Assignment 02</h3>
                         </a>
                     </div>
                 </div>
