JS KNIGHT Assignmet added to the portfolio

--- a/index.html
+++ b/index.html
@@ -474,6 +474,18 @@
                     </div>
                 </div>
 
+                <div class="assignment__item">
+                    <a href="Assignment/JS/KNIGHT/index.html">
+                        <img src="assest/images/asjsKNIGHT.PNG" alt="" class="assignment__img">
+                    </a>
+                    <div class="assignment__data">
+                        <p class="assinment__subtitle">JavaScript KNIGHT</p>
+                        <a href="Assignment/JS/KNIGHT/index.html">
+                            <h3 class="assignment__title">Assignment 01</h3>
+                        </a>
+                    </div>
+                </div>
+
             </div>
         </section>
 
