completed cal assignment and assignment added to the portfolio

--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@
                     <div class="assignment__data">
                         <p class="assinment__subtitle">CSS-FrameWorks</p>
                         <a href="Assignment/CSS-FrameWork/POS/index.html">
-                            <h3 class="assignment__title">Assignment 01</h3>
+                            <h3 class="assignment__title">Assignment</h3>
                         </a>
                     </div>
                 </div>
@@ -445,7 +445,7 @@
                     <div class="assignment__data">
                         <p class="assinment__subtitle">JavaScript SPA</p>
                         <a href="Assignment/JS/SPA/index.html">
-                            <h3 class="assignment__title">Assignment 01</h3>
+                            <h3 class="assignment__title">Assignment</h3>
                         </a>
                     </div>
                 </div>
@@ -481,7 +481,43 @@
                     <div class="assignment__data">
                         <p class="assinment__subtitle">JavaScript KNIGHT</p>
                         <a href="Assignment/JS/KNIGHT/index.html">
-                            <h3 class="assignment__title">Assignment 01</h3>
+                            <h3 class="assignment__title">Assignment</h3>
+                        </a>
+                    </div>
+                </div>
+
+                <div class="assignment__item">
+                    <a href="Assignment/JS/CAL/index.html">
+                        <img src="assest/images/asJsCal.PNG" alt="" class="assignment__img">
+                    </a>
+                    <div class="assignment__data">
+                        <p class="assinment__subtitle">JavaScript Calculator</p>
+                        <a href="Assignment/JS/CAL/index.html">
+                            <h3 class="assignment__title">Assignment</h3>
+                        </a>
+                    </div>
+                </div>
+
+                <div class="assignment__item">
+                    <a href="Assignment/JS/InMemory-POS/index.html">
+                        <img src="assest/images/as6js1.PNG" alt="" class="assignment__img">
+                    </a>
+                    <div class="assignment__data">
+                        <p class="assinment__subtitle">JavaScript InMemory-POS</p>
+                        <a href="Assignment/JS/InMemory-POS/index.html">
+                            <h3 class="assignment__title">Assignment</h3>
+                        </a>
+                    </div>
+                </div>
+
+                <div class="assignment__item">
+                    <a href="">
+                        <img src="assest/images/sampleproject.png" alt="" class="assignment__img">
+                    </a>
+                    <div class="assignment__data">
+                        <p class="assinment__subtitle">sample Assignment</p>
+                        <a href="">
+                            <h3 class="assignment__title">Sample</h3>
                         </a>
                     </div>
                 </div>
